[NA] fix(st-dropdown-menu): Fix wrong visualization on small screens (#652)

--- a/src/theme/components/_dropdown-menu.scss
+++ b/src/theme/components/_dropdown-menu.scss
@@ -51,6 +51,7 @@
        font-size: $egeo-font-size-xsmall;
        line-height: $egeo-line-height-xsmall;
        cursor: pointer;
+       display: flex;
 
        &:hover {
           background-color: $action-primary-light;
